--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,5 +27,9 @@
     <style name="BtnStyle.AppPrimary" parent="BtnStyle">
         <item name="android:background">@drawable/selector_btn_primary</item>
     </style>
+
+    <style name="BtnStyle.AppPrimary.Green" parent="BtnStyle">
+        <item name="android:background">@drawable/selector_btn_green</item>
+    </style>
     <!-- /Buttons -->
 </resources>
