add default paging

--- a/app/src/main/res/drawable-v24/shape_bg_progress_view.xml
+++ b/app/src/main/res/drawable-v24/shape_bg_progress_view.xml
@@ -4,4 +4,5 @@
         android:angle="45"
         android:endColor="@color/colorProgressRunningEndGradient"
         android:startColor="@color/colorProgressRunningStartGradient" />
+    <corners android:radius="10dp" />
 </shape>
