--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,28 +43,54 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
 
-    <androidx.core.widget.ContentLoadingProgressBar
+    <LinearLayout
         android:id="@+id/main_loader"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:gravity="center"
         android:visibility="gone"
+        android:orientation="vertical"
+        android:background="@color/colorPrimaryTranslucent"
         app:layout_constraintBottom_toTopOf="@+id/main_tabs"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
+
+        <ProgressBar
+            style="@style/TextAppearance.AppCompat.Large"
+            android:layout_width="wrap_content"
+            android:indeterminateTint="@color/white"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
+
+        <TextView
+            android:id="@+id/sync_progress_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:fontFamily="@font/roboto_black"
+            android:gravity="center"
+            android:layout_marginTop="16dp"
+            android:text="@string/main_loading"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sync_lottie_view" />
+    </LinearLayout>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/main_tabs"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        app:tabTextAppearance="@style/TabStyle"
-        app:tabGravity="center"
-        app:tabMode="fixed"
-        app:tabIndicatorColor="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:tabGravity="center"
         app:tabIconTint="@color/selector_tab_tint"
+        app:tabIndicatorColor="@android:color/transparent"
+        app:tabMode="fixed"
         app:tabSelectedTextColor="@color/colorPrimaryDark"
+        app:tabTextAppearance="@style/TabStyle"
         app:tabTextColor="@color/colorPrimaryDisabled" />
 </androidx.constraintlayout.widget.ConstraintLayout>
