--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -107,9 +107,20 @@
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/main_user_level_progress_text"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/main_user_levels_details_button"
                 app:layout_constraintStart_toEndOf="@+id/main_user_level_icon"
                 app:layout_constraintTop_toTopOf="@+id/main_user_level_icon" />
+
+            <ImageButton
+                android:id="@+id/main_user_levels_details_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:padding="5dp"
+                android:src="@drawable/ic_info"
+                app:layout_constraintBottom_toBottomOf="@+id/main_user_level_name_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/main_user_level_name_text" />
 
             <TextView
                 android:id="@+id/main_user_level_progress_text"
@@ -131,7 +142,7 @@
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="12dp"
                 android:progressDrawable="@drawable/shape_bg_progress_bar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +160,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp">
-
 
             <TextView
                 android:id="@+id/main_words_amount_text"
