--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -147,6 +147,40 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/main_user_level_icon" />
+
+
+            <TextView
+                android:id="@+id/main_user_level_progress_start_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:ellipsize="end"
+                android:layout_marginEnd="4dp"
+                android:fontFamily="@font/roboto_bold"
+                android:lines="1"
+                android:text="@string/user_level_beginner"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toStartOf="@+id/main_user_level_progress_end_text"
+                app:layout_constraintStart_toStartOf="@+id/main_user_level_progress"
+                app:layout_constraintTop_toBottomOf="@+id/main_user_level_progress" />
+
+            <TextView
+                android:id="@+id/main_user_level_progress_end_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/roboto_bold"
+                android:gravity="end"
+                android:lines="1"
+                android:layout_marginStart="4dp"
+                android:text="@string/user_level_explorer"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="@+id/main_user_level_progress"
+                app:layout_constraintStart_toEndOf="@+id/main_user_level_progress_start_text"
+                app:layout_constraintTop_toBottomOf="@+id/main_user_level_progress" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
