--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -47,6 +47,10 @@
         <item name="cornerSize">50%</item>
     </style>
 
+    <style name="ImgStyle.Rounded" parent="">
+        <item name="cornerSize">20dp</item>
+    </style>
+
     <style name="ImgStyle.RoundedTop" parent="">
         <item name="cornerSizeTopLeft">20dp</item>
         <item name="cornerSizeTopRight">20dp</item>
