--- a/app/src/main/res/layout/fragment_predefined_kits.xml
+++ b/app/src/main/res/layout/fragment_predefined_kits.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:padding="6dp"
+    android:background="@color/browser_actions_bg_grey"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
