--- a/app/src/main/res/drawable-v24/selector_text_primary.xml
+++ b/app/src/main/res/drawable-v24/selector_text_primary.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/colorPrimary" android:state_enabled="true" />
-    <item android:color="@color/colorPrimaryDisabled" android:state_enabled="false" />
+    <item android:color="@color/colorPrimary"  android:state_pressed="false" />
+    <item android:color="@color/colorPrimaryDisabled" android:state_pressed="true" />
 </selector>
