--- a/app/src/main/res/drawable/shape_btn_outline_white_default.xml
+++ b/app/src/main/res/drawable/shape_btn_outline_white_default.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="16dp" />
-    <gradient
-        android:endColor="@color/colorAccentStartGradient"
-        android:startColor="@color/colorAccentEndGradient" />
+    <stroke
+        android:width="2dp"
+        android:color="@color/white" />
 </shape>
