--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -116,7 +116,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:padding="5dp"
+                android:padding="8dp"
                 android:src="@drawable/ic_info"
                 app:layout_constraintBottom_toBottomOf="@+id/main_user_level_name_text"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -147,7 +147,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/main_user_level_icon" />
-
 
             <TextView
                 android:id="@+id/main_user_level_progress_start_text"
@@ -244,7 +243,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/main_kits_button"
-                style="@style/BtnStyle.AppPrimary.Outline"
+                style="@style/BtnStyle.Outline"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
