--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,10 +47,10 @@
         android:id="@+id/main_loader"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/browser_actions_bg_grey"
         android:gravity="center"
-        android:visibility="gone"
         android:orientation="vertical"
-        android:background="@color/colorPrimaryTranslucent"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/main_tabs"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,20 +59,20 @@
         <ProgressBar
             style="@style/TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
-            android:indeterminateTint="@color/white"
             android:layout_height="wrap_content"
-            android:indeterminate="true" />
+            android:indeterminate="true"
+            android:indeterminateTint="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/sync_progress_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/roboto_black"
             android:gravity="center"
-            android:layout_marginTop="16dp"
             android:text="@string/main_loading"
-            android:textColor="@color/white"
+            android:textColor="@color/colorPrimary"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
