--- a/app/src/main/res/layout/item_word.xml
+++ b/app/src/main/res/layout/item_word.xml
@@ -35,9 +35,8 @@
                 android:id="@+id/word_item_original"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="4dp"
                 android:ellipsize="end"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/roboto_medium"
                 android:lines="1"
                 android:text="@string/app_name"
                 android:textColor="@color/colorPrimaryDark"
@@ -50,10 +49,9 @@
                 android:id="@+id/word_item_translate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="4dp"
                 android:layout_marginTop="4dp"
                 android:ellipsize="end"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/roboto_medium"
                 android:lines="1"
                 android:text="@string/app_name"
                 android:textColor="@color/colorPrimary"
