add search activity, fixes

--- a/app/src/main/res/layout/activity_kit_details.xml
+++ b/app/src/main/res/layout/activity_kit_details.xml
@@ -86,7 +86,7 @@
                     android:layout_marginHorizontal="16dp"
                     android:layout_marginTop="8dp"
                     android:ellipsize="end"
-                    android:fontFamily="@font/roboto_reg"
+                    android:fontFamily="@font/roboto_medium"
                     android:gravity="center"
                     android:lines="1"
                     android:text="@string/app_name"
@@ -113,7 +113,7 @@
                         android:id="@+id/kit_details_progress_add_word_button"
                         style="@style/BtnStyle.Outline.White.Small"
                         android:layout_width="0dp"
-                        android:layout_height="30dp"
+                        android:layout_height="32dp"
                         android:layout_marginHorizontal="64dp"
                         android:text="@string/kit_details_add_word"
                         android:textSize="12sp"
