--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/browser_actions_bg_grey"
@@ -72,6 +71,16 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <ImageButton
+                android:id="@+id/main_sync_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:padding="8dp"
+                android:src="@drawable/ic_sync"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -90,7 +99,7 @@
                 android:id="@+id/main_user_level_icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/ic_no_image"
+                android:src="@drawable/ic_beginner"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:shapeAppearanceOverlay="@style/ImgStyle.Circle" />
@@ -115,6 +124,7 @@
                 android:id="@+id/main_user_levels_details_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:background="@android:color/transparent"
                 android:padding="8dp"
                 android:src="@drawable/ic_info"
@@ -153,8 +163,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:ellipsize="end"
                 android:layout_marginEnd="4dp"
+                android:ellipsize="end"
                 android:fontFamily="@font/roboto_bold"
                 android:lines="1"
                 android:text="@string/user_level_beginner"
@@ -168,12 +178,12 @@
                 android:id="@+id/main_user_level_progress_end_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/roboto_bold"
                 android:gravity="end"
                 android:lines="1"
-                android:layout_marginStart="4dp"
                 android:text="@string/user_level_explorer"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="12sp"
@@ -233,8 +243,8 @@
                 style="@style/BtnStyle.Outline"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
                 android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="32dp"
                 android:text="@string/main_my_kits_button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
